tests/valid/function/local_let_rec_fn_value.facet
fn main() -> unrestricted isize {
  let rec id_local(x: unrestricted isize) -> unrestricted isize {
    x
  }
  in let f: unrestricted fn(unrestricted isize) -> unrestricted isize = id_local in (f 7)
}
