tests/invalid/borrow_conflict/double_mut.facet
fn double_mut(mut x: unrestricted isize) -> unrestricted isize {
    let r1: unrestricted &mut unrestricted isize = (&mut x) in
    let r2: unrestricted &mut unrestricted isize = (&mut x) in
    (*r1)
}
